# ScrapiReddit

./: .gitignore  README.md  pyproject.toml
examples/: README.md  run_python_api.py
scrapi_reddit/: __init__.py  cli.py  core.py
tests/: test_core.py
